<resources>
    <string name="app_name">IntentProject</string>
    <string name="textview">TextView</string>
    <string name="second_page_with_intent_use">second page with intent use</string>
    <string name="go_to_second_page">Go to second page</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="send_data_intent_and_passing">send data(intent and passing)</string>
    <string name="name_passed">Name</string>
    <string name="age_passed">AGE passed</string>
    <string name="age_passed2">AGE</string>
    <string name="age_given">Age:-</string>
    <string name="age_">Age:-</string>
    <string name="todo">TODO</string>
    <string name="the_registered_values_are">The Registered Values Are:-</string>
    <string name="Name" />
    <string name="Age" />
    <string name="image">TODO</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_age">Enter age</string>
    <string name="register_here">Register Here</string>
    <string name="Enter_age" />
    <string name="Enter_name" />
</resources>